--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>OmRails</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<head>
+	  <title>OmRails</title>
+	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
 
-<%= yield %>
+		<header class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
 
-</body>
+					<%= link_to "One Month Rails","http://www.omrails.com",id:"logo"  %>
+
+					<nav>
+						<ul class="nav pull-right">
+							<li><%=	link_to "About", "/about" %></li>
+						</ul>
+					</nav>
+
+				</div> <!-- close the nav inner conatiner -->
+			</div><!-- close the nav inner div -->
+		</header> 
+		<div class="container">
+		            <% flash.each do |key, value| %>
+		            <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+		            <% end %>
+		            <%= yield %>
+		        </div>
+
+	</body>
 </html>
