--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1> About One month Rails</h1>
+<p>
+	
+	<a href="http://www.omrails.com">One Month Rails</a> isa project to teach
+	<a href="http://rubyonrails.org">Ruby on Rails</a> in one month.  
+	This is a simple application
+
+</p>
