--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
 			<div class="navbar-inner">
 				<div class="container">
 
-					<%= link_to "One Month Rails","http://www.omrails.com",id:"logo"  %>
+					<%= link_to "One Month Rails", root_path ,id:"logo"  %>
 
 					<nav>
 						<ul class="nav pull-right">
-							<li><%=	link_to "About", "/about" %></li>
+							<li><%=	link_to "about", about_path %></li>
 						</ul>
 					</nav>
 
@@ -24,11 +24,14 @@
 			</div><!-- close the nav inner div -->
 		</header> 
 		<div class="container">
-		            <% flash.each do |key, value| %>
-		            <%= content_tag(:div, value, class: "alert alert-#{key}") %>
-		            <% end %>
-		            <%= yield %>
-		        </div>
+            <% flash.each do |key, value| %>
+            <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+            <% end %>
+
+    		<%= yield %>
+
+		           
+		</div>
 
 	</body>
 </html>
