home page sign in button linked to page | dyanmic sign in and out linke added to nav

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 		</h1>
 		<h2>You've found the home page for my <a href="http://www.omrails.com">one month rails</a> first application</h2>
 
-	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-large btn-primary" %>
 
 
 </div>
