--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>OmRails</title>
+	  <title>One Month Rails</title>
 	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	  <%= csrf_meta_tags %>
@@ -16,7 +16,13 @@
 
 					<nav>
 						<ul class="nav pull-right">
-							<li><%=	link_to "about", about_path %></li>
+							<li><%=	link_to "About", about_path %></li>
+							<% if user_signed_in? %>
+								<li><%=	link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+							<% else %>
+								<li><%=	link_to "Sign In", new_user_session_path %></li>
+							<% end %>
+
 						</ul>
 					</nav>
 
